RESOLVED FIXED211935
GetByVal and PutByVal runtime operations shouldn't fall off a performance cliff when the property is an integer boxed as a double
https://bugs.webkit.org/show_bug.cgi?id=211935
Summary GetByVal and PutByVal runtime operations shouldn't fall off a performance cli...
Saam Barati
Reported 2020-05-14 17:12:40 PDT
...
Attachments
patch (16.84 KB, patch)
2020-05-14 19:04 PDT, Saam Barati
ysuzuki: review+
patch for landing (17.20 KB, patch)
2020-05-14 21:24 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2020-05-14 19:04:19 PDT
Yusuke Suzuki
Comment 2 2020-05-14 19:10:07 PDT
Comment on attachment 399442 [details] patch r=me
Mark Lam
Comment 3 2020-05-14 19:21:10 PDT
Comment on attachment 399442 [details] patch r=me too. The style complaint seems legit. Please fix.
Saam Barati
Comment 4 2020-05-14 20:28:50 PDT
(In reply to Mark Lam from comment #3) > Comment on attachment 399442 [details] > patch > > r=me too. The style complaint seems legit. Please fix. I agree, but the code is unrelated to this patch. I can drive by fix it though
Saam Barati
Comment 5 2020-05-14 21:24:49 PDT
Created attachment 399453 [details] patch for landing
EWS
Comment 6 2020-05-14 23:55:11 PDT
Committed r261731: <https://trac.webkit.org/changeset/261731> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399453 [details].
Radar WebKit Bug Importer
Comment 7 2020-05-14 23:56:16 PDT
Note You need to log in before you can comment on or make changes to this bug.